{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 48,
  "lineage": "5444c20d-c885-96df-d359-be4785032b28",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c0f9ef2f505b609",
            "arn": "arn:aws:ec2:us-east-1:795411043085:instance/i-0b6247c29f5511db4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6247c29f5511db4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alexbol-sandbox",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc96d6be60fca7d1",
            "private_dns": "ip-10-0-10-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.70",
            "public_dns": "ec2-34-228-9-200.compute-1.amazonaws.com",
            "public_ip": "34.228.9.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:795411043085:key/24ce3e9a-0892-4ce6-ad7e-1c339a8dd484",
                "tags": {
                  "Name": "test instance - /dev/xvda",
                  "Service": "ZNET - testing",
                  "Team": "ZNET"
                },
                "throughput": 0,
                "volume_id": "vol-0ef1a71ad5d46d0d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb5921fd9c6afc00",
            "tags": {
              "Name": "test instance",
              "Service": "ZNET - testing",
              "Team": "ZNET"
            },
            "tags_all": {
              "Name": "test instance",
              "Service": "ZNET - testing",
              "Team": "ZNET"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d3e7aa362c69e4a"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.subnets",
            "aws_vpc.test_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloud_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795411043085:internet-gateway/igw-00b40138a64694636",
            "id": "igw-00b40138a64694636",
            "owner_id": "795411043085",
            "tags": {
              "Name": "cloud igw"
            },
            "tags_all": {
              "Name": "cloud igw"
            },
            "vpc_id": "vpc-08dd72517f392ad2a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795411043085:loadbalancer/net/test-nlb-tf/a4ca2ec0b25a9ab8",
            "arn_suffix": "net/test-nlb-tf/a4ca2ec0b25a9ab8",
            "dns_name": "test-nlb-tf-a4ca2ec0b25a9ab8.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:795411043085:loadbalancer/net/test-nlb-tf/a4ca2ec0b25a9ab8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test-nlb-tf",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010278a25fa710e80"
              },
              {
                "subnet_id": "subnet-04a51092c5d3d9b7f"
              },
              {
                "subnet_id": "subnet-0bb5921fd9c6afc00"
              }
            ],
            "subnets": [
              "subnet-010278a25fa710e80",
              "subnet-04a51092c5d3d9b7f",
              "subnet-0bb5921fd9c6afc00"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-08dd72517f392ad2a",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795411043085:listener/net/test-nlb-tf/a4ca2ec0b25a9ab8/a6de37f7334a7bc2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:795411043085:targetgroup/tf-nlb-tg/f9ba23a9d1b6a256",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795411043085:listener/net/test-nlb-tf/a4ca2ec0b25a9ab8/a6de37f7334a7bc2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:795411043085:loadbalancer/net/test-nlb-tf/a4ca2ec0b25a9ab8",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-nlb",
            "aws_lb_target_group.test-tg-nlb",
            "aws_subnet.subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test-tg-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795411043085:targetgroup/tf-nlb-tg/f9ba23a9d1b6a256",
            "arn_suffix": "targetgroup/tf-nlb-tg/f9ba23a9d1b6a256",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795411043085:targetgroup/tf-nlb-tg/f9ba23a9d1b6a256",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-nlb-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": true,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08dd72517f392ad2a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test-tg-attachement-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:795411043085:targetgroup/tf-nlb-tg/f9ba23a9d1b6a256-20240119174747253700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:795411043085:targetgroup/tf-nlb-tg/f9ba23a9d1b6a256",
            "target_id": "10.0.10.70"
          },
          "dependencies": [
            "aws_instance.test_instance",
            "aws_lb_target_group.test-tg-nlb",
            "aws_security_group.ec2-sg",
            "aws_subnet.subnets",
            "aws_vpc.test_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795411043085:security-group/sg-08d3e7aa362c69e4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d3e7aa362c69e4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "795411043085",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08dd72517f392ad2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-az-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795411043085:subnet/subnet-0bb5921fd9c6afc00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb5921fd9c6afc00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795411043085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08dd72517f392ad2a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "private-subnet-az-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795411043085:subnet/subnet-010278a25fa710e80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010278a25fa710e80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795411043085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08dd72517f392ad2a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "private-subnet-az-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795411043085:subnet/subnet-04a51092c5d3d9b7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a51092c5d3d9b7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795411043085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08dd72517f392ad2a"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795411043085:vpc/vpc-08dd72517f392ad2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0426b0e16fa6e119c",
            "default_route_table_id": "rtb-0f8f30db12aae76a7",
            "default_security_group_id": "sg-0ca13e28051b94ee7",
            "dhcp_options_id": "dopt-af3322c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08dd72517f392ad2a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8f30db12aae76a7",
            "owner_id": "795411043085",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}